# softcut-py

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build-publish.yml  ci.yml
demos/: 01_varispeed.py  02_loop_points.py  03_overdub.py  04_stereo_layers.py  05_filter_sweep.py  06_live_looper.py  07_frippertronics.py  08_tape_stop.py  09_filters.py  10_phase_sync.py  11_capture.py  README.md  _util.py
docs/: concepts.md
src/softcut/: __init__.py  _core.cpp  _core.pyi
tests/: test_demos.py  test_softcut.py
